2007-10-17  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (ah-cleartool-tq-start): 1.119 start cleartool
	in the users home directory
	(with-cleartool-directory): 1.119 new macro
	(ah-clearcase-setup-vprop): 1.119 new function
	(ah-clearcase-get-vprop): 1.119 initializing a VPROP moved to
	`ah-clearcase-setup-vprop'
	(ah-clearcase-vob-tag-for-path)
	(ah-clearcase-maybe-set-vc-state)
	(vc-clearcase-diff)
	(vc-clearcase-create-snapshot)
	(vc-clearcase-get-label-differences)
	(vc-clearcase-what-view-tag)
	(vc-clearcase-set-activity)
	(vc-clearcase-show-current-activity): 1.119 use
	`with-cleartool-directory'

2007-10-16  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-dir-state-cache): 1.118 new
	variable
	(vc-clearcase-dir-state): 1.118 new function
	(vc-clearcase-dired-state-info): 1.118 new function
	(vc-clearcase-responsible-p): 1.118 re-written, takes into account
	`vc-clearcase-dir-state-cache'.

2007-10-13  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (ah-cleartool-ask): 1.117 clear the message
	about restarting cleartool.
	(vc-clearcase-revert, vc-clearcase-cancel-version): 1.117
	ah-clearcase-snapshot-view-p accepts a fprop as argument
	(ah-clearcase-use-external-diff): 1.117 new variable
	(vc-clearcase-diff): 1.117 optionally use the diff package for
	comparing revisions

2007-09-26  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-set-activity)
	(vc-clearcase-show-current-activity): 1.116 use expand-file-name
	on the default-directory -- avoid confusing cleartool

2007-08-20  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (ah-clearcase-lshistory-fmt)
	(ah-clearcase-lshistory-fmt-ucm): 1.115 changed to more compact
	format
	(ah-clearcase-log-view-font-lock-keywords)
	(ah-clearcase-record-separator-rx): 1.115 updated
	(ah-clearcase-log-view-record-field): 1.115 updated for new record
	format.